@@ -1,5 +1,9 @@
 Changelog
 =========
+2013/06/23 (v0.3)
+ - added support for NMAP SCRIPT ENGINE
+   >>> r=nm.scan(hosts='127.0.0.1', ports='139', arguments="-sC ")
+   >>> print(nm._scan_result['scan']['127.0.0.1']['hostscript'])
 
 2013/02/24 (v0.2.7)
  - added an address block in host scan result which contains ipv4, mac and other addresses :
